--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ html {
 
     --background-active-brown: hsl(22 88% 16% / 0.5);
 
-    --transparent-black: hsl(0 0% 8% 0.8);
+    --transparent-black: hsla(0, 0%, 0%, 0.3);
 
     --font-size-max: 4rem;
     --font-size-mid: 2rem;
@@ -223,7 +223,7 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0 0 0 / 0.3);
+    background-color: var(--transparent-black);
     z-index: 1;
 }
 
@@ -306,7 +306,7 @@ a {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgb(0 0 0 / 0.3);
+    background-color: var(--transparent-black);
     z-index: 1;
 }
 
@@ -379,7 +379,7 @@ a {
     left: 0;
     width: 100%;
     aspect-ratio: 1 / 1;
-    background-color: rgb(0 0 0 / 0.3);
+    background-color: var(--transparent-black);
     z-index: 1;
 }
 
