--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,7 @@ a {
     visibility: hidden;
 }
 
-/********** HERO Media query 1100px **********/
+/********** HEADER Media query 1100px **********/
 @media (max-width: 1100px) {
 
     #header #navbar {
@@ -141,7 +141,7 @@ a {
     }
 }
 
-/********** HERO Media query 980px **********/
+/********** HEADER Media query 980px **********/
 @media (max-width: 980px) {
 
     #header .hamburger {
@@ -199,6 +199,18 @@ a {
 
     #header .social-icon {
         display: none;
+    }
+}
+
+/********** HEADER Media query 756px **********/
+@media (max-width: 756px) {
+    #header {
+        padding: 2rem;
+    }
+
+    #header .nav-close {
+        top: 2.55rem;
+        right: 2.22rem;
     }
 }
 
@@ -278,6 +290,13 @@ a {
 
 .hero .hero-content a:hover::before {
     left: 0;
+}
+
+/********** HERO Media query 756px **********/
+@media (max-width: 756px) {
+    .hero .hero-content h1 {
+        font-size: var(--font-size-mid);
+    }
 }
 
 /*********** ABOUT Styling ***********/
