--- a/css/styles.css
+++ b/css/styles.css
@@ -574,6 +574,7 @@ a {
 
 .service-container .service-content .service-content-image {
     width: 100%;
+    overflow: hidden;
 }
 
 .service-container .service-content .service-content-image img {
@@ -581,6 +582,11 @@ a {
     aspect-ratio: 1 / 1;
     object-fit: cover;
     object-position: center;
+    transition: transform 800ms;
+}
+
+.service-container .service-content .service-content-image:hover > img {
+    transform: scale(1.1);
 }
 
 .service-container .service-content .service-content-description {
