--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,7 @@
     --background-color-darkgrey: rgb(40, 40, 40);
     --background-color-white: hsl(0, 0%, 100%);
     --background-color-brown: hsl(22, 88%, 16%);
+    --background-color-darkbrown: hsl(23, 81%, 6%);
 
     --transparent-brown: hsl(22 88% 16% / 0.2);
     --transparent-black: hsla(0, 0%, 0%, 0.3);
@@ -766,4 +767,117 @@ a {
         background-color: transparent;
         box-shadow: none;
     }
+}
+
+/************ FOOTER Styling ************/
+.footer {
+    width: 100%;
+    height: fit-content;
+}
+.footer, .footer-left {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 5rem;
+    gap: 100px;
+    flex-wrap: wrap;
+    background-color: var(--background-color-darkbrown);
+}
+
+.footer-left {
+    align-items: flex-start;
+    padding: 0;
+}
+
+.footer-left h4 {
+    font-size: var(--font-size-mid);
+    color: var(--text-color-white);
+    opacity: .7;
+}
+
+.footer-left ul {
+    margin-top: 30px;
+}
+.footer-left ul li {
+    display: block;
+    margin: 20px auto;
+}
+.footer-left ul li a {
+    font-size: 20px;
+    color: var(--text-color-white);
+    opacity: .7;
+    transition: opacity 200ms;
+}
+.footer-left ul li a:hover {
+    opacity: 1;
+}
+
+.footer-right {
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    align-items: flex-end;
+}
+
+.footer-right .news-letter {
+    position: relative;
+}
+
+.footer-right .news-letter input,
+.footer-right .news-letter button {
+    padding: .5rem 1rem;
+    font-size: 20px;
+}
+
+.footer-right .news-letter button {
+    position: absolute;
+    right: 0;
+    top: 2px;
+    cursor: pointer;
+    color: var(--background-color-brown);
+    background-color: var(--background-color-white);
+    border: none;
+    outline: none;
+    border-left: 4px solid var(--background-color-darkgrey);
+    border-top-left-radius: 40px;
+}
+
+.footer-right .social-media {
+    display: flex;
+}
+
+.footer-right .social-media a {
+    font-size: 24px;
+    margin: auto 10px;
+    width: 50px;
+    height: 50px;
+    border: 1px solid var(--background-color-white);
+    color: var(--text-color-white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    position: relative;
+    z-index: 1;
+    transition: color 300ms;
+}
+.footer-right .social-media a:hover {
+    color: var(--background-color-brown);
+}
+
+.footer-right .social-media a::after {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    width: 100%;
+    height: 100%;
+    background-color: var(--background-color-white);
+    border-radius: 50%;
+    z-index: -1;
+    transition: transform 300ms;
+}
+.footer-right .social-media a:hover::after {
+    transform: translate(-50%, -50%) scale(1);
 }
