--- a/css/styles.css
+++ b/css/styles.css
@@ -837,9 +837,16 @@ a {
     position: relative;
 }
 
+.footer-right .news-letter input {
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 8px;
+}
+
 .footer-right .news-letter input,
 .footer-right .news-letter button {
     padding: .5rem 1rem;
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
     font-size: 20px;
 }
 
