--- a/css/styles.css
+++ b/css/styles.css
@@ -787,6 +787,7 @@ a {
     height: fit-content;
     position: relative;
     font-family:var(--font-Cinzel);
+    overflow: hidden;
 }
 .footer, .footer-left {
     display: flex;
