--- a/css/styles.css
+++ b/css/styles.css
@@ -512,6 +512,43 @@ a {
     color: var(--text-color-white);
 }
 
+.product-viewer {
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    background-color: rgb(0 0 0 / 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: 300ms;
+    transform: scale(0);
+}
+.product-viewer.active {
+    visibility: visible;
+    opacity: 1;
+    transform: scale(1);
+}
+
+.product-viewer img {
+    width: 80%;
+    height: 80%;
+    object-fit: contain;
+}
+
+.close-product {
+    color: #fff;
+    position: absolute;
+    top: 15%;
+    right: 15%;
+    font-size: 30px;
+    cursor: pointer;
+}
+
 /********** ABOUT Media query 756px **********/
 @media (max-width: 756px) {
 
