--- a/css/styles.css
+++ b/css/styles.css
@@ -523,6 +523,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     visibility: hidden;
     opacity: 0;
     transition: 300ms;
@@ -542,11 +543,11 @@ a {
 
 .close-product {
     color: #fff;
-    position: absolute;
-    top: 15%;
-    right: 15%;
     font-size: 30px;
     cursor: pointer;
+    padding: 1rem;
+    border: 1px solid #fff;
+    border-radius: 30px;
 }
 
 /********** ABOUT Media query 756px **********/
