--- a/css/styles.css
+++ b/css/styles.css
@@ -766,14 +766,19 @@ a {
     width: max-content;
     margin-left: auto;
     margin-right: 0;
-    padding: 1rem 3rem;
+    padding: .8rem 3rem;
     font-size: 20px;
     font-family:var(--font-Josefin-slab);
     font-weight: 700;
     text-transform: uppercase;
     cursor: pointer;
     background-color: var(--background-color-darkgrey);
+    border: none;
     color: var(--text-color-white);
+    transition: 200ms;
+}
+.contact-container form button:hover {
+    background-color: var(--background-color-brown);
 }
 
 /********** CONTACT Media query 980px **********/
